<resources>
    <string name="app_name">LoginProject</string>
    <string name="pizza_shop">Pizza shop</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">login</string>
    <string name="password">****</string>
    <string name="register">register</string>
    <string name="login_page">Login page</string>
    <string name="user_info">User info</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_example">+ 7 (000) 000–00–00</string>
    <string name="your_password">Your password</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">sign up</string>
    <string name="dismiss">dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>