<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/transparent">

    <View
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/view_background"/>

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/first_font"
        android:text="@string/login_page"
        android:textColor="@color/white_trans"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/first_font"
        android:text="@string/user_info"
        android:textColor="@color/white_trans"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etUserInfo"
        style="@style/et_settings"
        android:background="@drawable/et_main_background"
        android:autofillHints="name"
        android:inputType="text"
        android:drawableStart="@drawable/baseline_mail_24"
        android:drawablePadding="8dp"
        android:hint="@string/example_gmail_com"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/etName"
        style="@style/et_settings"
        android:background="@drawable/et_main_background"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/et_settings"
        android:background="@drawable/et_main_background"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_local_phone_24"
        android:drawablePadding="8dp"
        android:inputType="phone"
        android:hint="@string/phone_example" />

    <TextView
        android:id="@+id/tvPassTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/first_font"
        android:text="@string/your_password"
        android:textColor="@color/white_trans"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPassOne"
        style="@style/et_settings"
        android:background="@drawable/et_main_background"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password" />

    <EditText
        android:id="@+id/etPassTwo"
        style="@style/et_settings"
        android:background="@drawable/et_main_background"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:hint="@string/repeat_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/first_font"
        android:background="@drawable/btn_create_background"
        android:text="@string/sign_up"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/first_font"
        android:background="@drawable/btn_register_background"
        android:text="@string/dismiss"
        android:textSize="18sp"/>

</LinearLayout>