<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_cafe"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:padding="4dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/first_font"
            android:text="@string/pizza_shop"
            android:textColor="@color/white_trans"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/first_font"
            android:text="@string/login_to_continue"
            android:textColor="@color/white_trans"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints="name"
            android:padding="10dp"
            android:fontFamily="@font/second_font"
            android:background="@drawable/et_main_background"
            android:drawableStart="@drawable/baseline_mail_24"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:hint="@string/example_gmail_com"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:padding="10dp"
            android:fontFamily="@font/second_font"
            android:background="@drawable/et_main_background"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="15sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToRegister"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_background"
            android:fontFamily="@font/first_font"
            android:text="@string/login"
            android:textSize="17sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToLogin"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_register_background"
            android:fontFamily="@font/first_font"
            android:text="@string/register"
            android:textSize="17sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>